<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_change_pwd"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_change_pwd"/>
    <item
        android:id="@+id/sharemyapp"
        app:showAsAction="never"
        android:title="@string/share"/>
    <item
        android:id="@+id/ratemyapp"
        android:icon="@drawable/rate_app"
        app:showAsAction="never"
        android:title="@string/rate_applock"/>
    <item
        android:id="@+id/give_feedback"
        app:showAsAction="never"
        android:title="@string/feedback"/>
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:iconifiedByDefault="true"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/upgrade"
        app:showAsAction="never"
        android:title="@string/upgrade"/>

</menu>